--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 footer-links:
   dribbble:
   email:
-  facebook: sim.sangjin7
+  facebook: dyanos
   flickr:
-  github: barryclark/jekyll-now
+  github: dyanos
   instagram:
-  linkedin:
+  linkedin: dyanos
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: jekyllrb
+  twitter: simsangjin
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
