--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,12 @@
 name: dyanos
 
 # Short bio or description (displayed in the header)
-description: Developer, Amateur Physicst
+description: Data Scientist, Developer, Amateur Physicst
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+
+theme: jekyll-theme-minimal
 
 #
 # Flags below are optional
