--- a/_config.yml
+++ b/_config.yml
@@ -1,90 +1,19 @@
-#
-# This file contains configuration flags to customize your site
-#
+# Site settings
+title: "Discontinuity"
+author: "Sim, Sang-Jin"
+description: "이 페이지는 인터넷 및 책 등에서 수집한 잡다한 지식들을 정리하여 올려놓는 사이트입니다."
+keywords: "Physics, Mathematics, Machine Learning, Software Engineering, Compiler Construction, Embedded System"
+biography: "아직은 비밀!!"
+colophon: "Copyright © Sim, Sang-Jin<br>Content available under <a href='http://creativecommons.org/licenses/by-nc-sa/4.0/'>Creative Commons (BY-NC-SA)</a> unless otherwise noted.<br>This site is hosted at <a href='https://pages.github.com/'>Github Pages</a> and created with <a href='http://jekyllrb.com/'>Jekyll</a>."
 
-# Name of your site (displayed in the header)
-name: dyanos
-
-# Short bio or description (displayed in the header)
-description: Data Scientist, Developer, Amateur Physicst
-
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
-#
-# Flags below are optional
-#
-
-# Includes an icon in the footer for each username you enter
-footer-links:
-  dribbble:
-  email: dyanos@gmail.com
-  facebook: sim.sangjin
-  flickr:
-  github: dyanos
-  instagram: dyanos
-  linkedin: dyanos
-  pinterest:
-  rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: simsangjin
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
-
-
-# Enter your Disqus shortname (not your username) to enable commenting on posts
-# You can find your shortname on the Settings page of your Disqus account
-disqus:
-
-# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
-
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-# Used for Sitemap.xml and your RSS feed
-url:
-
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
 baseurl: ""
+url: "http://dyanos.github.io"
 
-#
-# !! You don't need to change any of the configuration flags below !!
-#
+twitter_username: simsangjin
+github_username: dyanos
+linkedin_username: dyanos
+facebook_username: sim.sangjin.7
 
 markdown: kramdown
 highlighter: rouge
-permalink: /:title/
-
-# The release of Jekyll Now that you're using
-version: v1.2.0
-
-# Jekyll 3 now only supports Kramdown for Markdown
-kramdown:
-  # Use GitHub flavored markdown, including triple backtick fenced code blocks
-  input: GFM
-  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
-  syntax_highlighter: rouge
-  syntax_highlighter_opts:
-    # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
-
-# Set the Sass partials directory, as we're using @imports
-sass:
-  style: :expanded # You might prefer to minify using :compressed
-
-# Use the following plug-ins
-gems:
-  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
-
-# Exclude these files from your production _site
-exclude:
-    - Gemfile
-    - Gemfile.lock
-    - LICENSE
-    - README.md
-    - CNAME
-
-theme: jekyll-theme-minimal
+permalink: /blog/:year/:month/:day/:title/
