--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: "https://dyanos.github.io"
 twitter_username: simsangjin
 github_username: dyanos
 linkedin_username: dyanos
-facebook_username: sim.sangjin.7
+facebook_username: sangjin.sim.7
 
 markdown: kramdown
 highlighter: rouge
